# helicopter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: matplotlibcpp.h
src/: Helicopter.h  engine.h  helicopter.h  screw.h  simulator.h  vec.h  wind_cursor.h  wind_cursor_impl.cpp
